docs: add docs for token refresh endpoint
